<package format="3">
  <name>robot_manager</name>
  <version>0.1.0</version>
  <description>Package to manage robot via a web app</description>

  <maintainer email="araujopedrop@gmail.com">Pedro Araujo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>flask</depend>
  <depend>flask-cors</depend>
  <depend>pymongo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
